# scaler-openenv-meta-hackathon

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  buyer.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  smoke_test.py  tasks.py  train_grpo.py
server/: app.py
